Resolve "Test fixes"